@@ -314,6 +314,8 @@ static void _read_last_decay_ran(time_t *last_ran, time_t *last_reset)
 	return;
 
 unpack_error:
+	if (!ignore_state_errors)
+		fatal("Incomplete priority last decay file exiting, start with '-i' to ignore this");
 	error("Incomplete priority last decay file returning");
 	free_buf(buffer);
 	return;
