@@ -1469,6 +1469,8 @@ extern int select_p_state_restore(char *dir_name)
 	debug3("Version in blade_state header is %u", protocol_version);
 
 	if (protocol_version == (uint16_t)NO_VAL) {
+		if (!ignore_state_errors)
+			fatal("Can not recover blade state, data version incompatible, start with '-i' to ignore this");
 		error("***********************************************");
 		error("Can not recover blade state, "
 		      "data version incompatible");
@@ -1562,6 +1564,8 @@ extern int select_p_state_restore(char *dir_name)
 unpack_error:
 	slurm_mutex_unlock(&blade_mutex);
 
+	if (!ignore_state_errors)
+		fatal("Incomplete blade data checkpoint file, you may get unexpected issues if jobs were running. Start with '-i' to ignore this");
 	error("Incomplete blade data checkpoint file, you may get "
 	      "unexpected issues if jobs were running.");
 	free_buf(buffer);
